fixed JVM paras